--- a/public_html/scss/_req-dates.scss
+++ b/public_html/scss/_req-dates.scss
@@ -6,7 +6,6 @@
 
   .date-col-wrapper {
     display: flex;
-    justify-content: space-between;
   }
 
   .date-box {
@@ -25,6 +24,7 @@
   .mid-col {
     color: $black;
     max-width: 400px;
+    text-align: center;
   }
   input {
     height: max-content;
